; ModuleID = '/home/carl/AnghaBench/openssl/ssl/statem/extr_statem_lib.c_check_in_list.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/statem/extr_statem_lib.c_check_in_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SSL_SECOP_CURVE_CHECK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_in_list(i32* %0, i64 %1, i64* %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64* %2, i64** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  %14 = load i64*, i64** %9, align 8
  %15 = icmp eq i64* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %5
  %17 = load i64, i64* %10, align 8
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %16, %5
  store i32 0, i32* %6, align 4
  br label %48

20:                                               ; preds = %16
  store i64 0, i64* %12, align 8
  br label %21

21:                                               ; preds = %44, %20
  %22 = load i64, i64* %12, align 8
  %23 = load i64, i64* %10, align 8
  %24 = icmp ult i64 %22, %23
  br i1 %24, label %25, label %47

25:                                               ; preds = %21
  %26 = load i64*, i64** %9, align 8
  %27 = load i64, i64* %12, align 8
  %28 = getelementptr inbounds i64, i64* %26, i64 %27
  %29 = load i64, i64* %28, align 8
  store i64 %29, i64* %13, align 8
  %30 = load i64, i64* %8, align 8
  %31 = load i64, i64* %13, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %43

33:                                               ; preds = %25
  %34 = load i32, i32* %11, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %42

36:                                               ; preds = %33
  %37 = load i32*, i32** %7, align 8
  %38 = load i64, i64* %13, align 8
  %39 = load i32, i32* @SSL_SECOP_CURVE_CHECK, align 4
  %40 = call i64 @tls_group_allowed(i32* %37, i64 %38, i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %36, %33
  store i32 1, i32* %6, align 4
  br label %48

43:                                               ; preds = %36, %25
  br label %44

44:                                               ; preds = %43
  %45 = load i64, i64* %12, align 8
  %46 = add i64 %45, 1
  store i64 %46, i64* %12, align 8
  br label %21

47:                                               ; preds = %21
  store i32 0, i32* %6, align 4
  br label %48

48:                                               ; preds = %47, %42, %19
  %49 = load i32, i32* %6, align 4
  ret i32 %49
}

declare dso_local i64 @tls_group_allowed(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
